--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    //"MongoDb": "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
+    "MongoDb": "mongodb://admin:admin123@localhost:27017/TodoList?authSource=admin"
   }
 }
+
+
