adjust to docker database connection

--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
 
   "ConnectionStrings": {
-    //"MongoDb": "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
-    "MongoDb": "mongodb://admin:admin123@localhost:27017/TodoList?authSource=admin"
+    "MongoDb": "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
+    //"MongoDb": "mongodb://admin:admin123@localhost:27017/TodoList?authSource=admin" // apenas para teste local
   }
 }
 
