--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,5 @@
-version: '3.9'
+version: '3.8'
 services:
-  webapi:
-    build:
-      context: .
-      dockerfile: src/WebAPI/Dockerfile
-    ports:
-      - "5000:5000"
-      - "5001:5001"
-    environment:
-      ASPNETCORE_URLS: "http://+:5000;https://+:5001"
-      ConnectionStrings__MongoDb: "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin&serverSelectionTimeoutMS=30000"
-    depends_on:
-      - mongodb
-
   mongodb:
     image: mongo:6.0
     container_name: mongodb
@@ -21,10 +8,53 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    networks:
+      - todo-network
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin123
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh --quiet
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+  tests:
+    build:
+      context: .
+      dockerfile: tests/WebAPI.Tests/Dockerfile
+    networks:
+      - todo-network
+    environment:
+      MongoDB__ConnectionString: "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    restart: "no"
+
+  webapi:
+    build:
+      context: .
+      dockerfile: src/WebAPI/Dockerfile
+    ports:
+      - "5000:5000"
+      - "5001:5001"
+    networks:
+      - todo-network
+    environment:
+      ASPNETCORE_URLS: "http://+:5000;https://+:5001"
+      ASPNETCORE_ENVIRONMENT: "Development"
+      MongoDB__ConnectionString: "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
+    depends_on:
+      tests:
+        condition: service_completed_successfully
+      mongodb:
+        condition: service_healthy
+
+networks:
+  todo-network:
+    driver: bridge
 
 volumes:
   mongo_data:
-
