--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   mongodb:
     image: mongo:6.0
@@ -41,12 +40,11 @@ services:
       context: .
       dockerfile: src/WebAPI/Dockerfile
     ports:
-      - "5000:5000"
-      - "5001:5001"
+      - "5050:5050"
     networks:
       - todo-network
     environment:
-      ASPNETCORE_URLS: "http://0.0.0.0:5000;https://0.0.0.0:5001"
+      ASPNETCORE_URLS: "http://0.0.0.0:5050"
       ASPNETCORE_ENVIRONMENT: "Development"
       MongoDB__ConnectionString: "mongodb://admin:admin123@mongodb:27017/TodoList?authSource=admin"
     depends_on:
